# Volf

./: .gitignore  README.md  pyproject.toml  ruff.toml
config/: clark_west.json  clark_west_har_mean.json  clark_west_har_point.json  har.json  har_mean.json  random_forest.json  random_forest_mean.json  shap.json  xgboost.json  xgboost_mean.json
data/: ag_v2.csv  categorical_epu_indices.csv  news.csv  soybean-production-by-state.csv
data/ag/: v1.csv  v2.csv  v3.csv  v4.csv
data/analysis/correlations/: mean_target_corr_wheat_weekly_rv_h12_log.csv  mean_target_corr_wheat_weekly_rv_h16_log.csv  mean_target_corr_wheat_weekly_rv_h4_log.csv  mean_target_corr_wheat_weekly_rv_h8_log.csv
data/benchmark/: har.csv
data/benchmark/target_horizon_1/: clark_west.csv  har.csv
data/benchmark/target_horizon_12/: har.csv
data/climate/: NAO_index.csv  SOI_index.csv  TA_Index.csv  co2_weekly_mlo.csv  global_temperature_anomaly.csv  nao.csv  noa.csv  noaa_weekly.csv  soi.csv
data/google_trend/: climate_change_anomaly.csv
data/macroeconomic/: DJIA_index.csv  DTWEXBGS.csv  Dow Jones Industrial Average Historical Data.csv  WTI_USD Historical Data.csv  WTI_index.csv  stock_uncertainty.csv
data/news/: epu_daily.csv  frbsf.csv  news.csv
data/production_by_state/: corn.csv  wheat.csv
docs/: HAR.md
notebooks/: har_benchmark_report.ipynb
scripts/: climate.py  news.py  wti.py
scripts/analysis/: mean_target_correlations.py
scripts/benchmark/: clark_west.py  har.py  random_forest.py  shap.py  xgboost.py
scripts/climate/: global_temperature_anomaly.py  nao.py  soi.py
scripts/dataset/news/: news.py
scripts/macroeconomics/: djia.py
scripts/news/: news.py
src/benchmark/: __init__.py  har_benchmark.py  utils.py
src/dataset/: bq_price.py  dataset.py  epu.py  gdelt.py
src/metrics/: __init__.py  statistical.py
src/model/: __init__.py  har.py
src/variable_selection/: __init__.py  bsr.py  lasso.py
(+78 files in other folders)
