[project]
name = "volf"
version = "0.1.0"
authors = [
    {name = "Arshia Abolghasemi", email = "arshiabolghasemi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pandas==3.0.1",
    "numpy==2.4.2",
    "requests==2.32.5",
    "dynaconf==3.2.12",
    "tenacity==9.1.4",
    "pytrends==4.9.2",
    "pyarrow==23.0.1",
    "scikit-learn==1.8.0",
    "statsmodels==0.14.6",
    "google-cloud-bigquery==3.40.1",
    "google-cloud-bigquery-storage==2.36.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.14.1",
]
