[project]
name = "volf"
version = "0.1.0"
authors = [
    {name = "Arshia Abolghasemi", email = "arshiabolghasemi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}

dependencies = [
    "pandas==2.2.2",
    "numpy==1.26.4",
    "requests==2.32.3",
    "dynaconf==3.2.5",
    "tenacity==9.0.0",
    "pytrends==4.9.2",
    "pyarrow==16.1.0",
    "scikit-learn==1.5.1",
    "xgboost==2.1.1",
    "scipy==1.13.1",
    "statsmodels==0.14.2",
    "matplotlib==3.8.4",
    "tqdm==4.66.4",
    "google-cloud-bigquery==3.25.0",
    "google-cloud-bigquery-storage==2.25.0",
    "shap==0.45.1",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.5.6",
]
